[package]
name = "chirp-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.5.2", package = "libadwaita", features = ["v1_4"] }
gio = "0.18.2"
gtk = { version = "0.7.2", package = "gtk4", features = ["v4_12"] }
rand = "0.8.5"
soup3 = "0.5.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
serde = { version = "1.0.188", features = ["derive"]}
serde_json = "1.0.107"
chrono = "0.4.31"
dotenvy = "0.15.7"

[build-dependencies]
glib-build-tools = "0.18.0"

[[bin]]
name = "chirp-gui"
path = "src/main.rs"
