[package]
name = "chirp-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chirp-server"
path = "src/main.rs"

[dependencies]
actix = "0.13.1"
actix-rt = "2.9.0"
actix-web = "4.4.0"
actix-web-actors = "4.2.0"
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"]}
serde_json = "1.0.107"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"