[package]
name = "chirp-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chirp-server"
path = "src/main.rs"

[dependencies]
actix = "0.13.1"
actix-rt = "2.9.0"
actix-web = {version = "4.4.0", features = ["rustls-0_21"] }
actix-web-actors = "4.2.0"
chrono = "0.4.31"
diesel = { version = "2.1.1", features = ["postgres", "chrono"] }
dotenvy = "0.15.7"
rand = "0.8.5"
rustls = "0.21.7"
rustls-pemfile = "1.0.3"
serde = { version = "1.0.188", features = ["derive"]}
serde_json = "1.0.107"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
